Fix: Tooltips in scores labels visibility

--- a/src/ui/panels/ScoreCompactTable/style.module.scss
+++ b/src/ui/panels/ScoreCompactTable/style.module.scss
@@ -40,7 +40,7 @@
   }
 
   span:nth-child(n + 2) {
-    text-align: right;
+    text-align: center;
     font-weight: 700;
     color: #2d221a;
   }
